--- a/client/dashboard/scenes/patients/patient.component.html
+++ b/client/dashboard/scenes/patients/patient.component.html
@@ -13,51 +13,110 @@
     <a (click)="onEdit()" *ngIf="!observation" class="modal__action" i18n>Edit</a>
     <a (click)="onSave()" *ngIf="observation" class="modal__action" i18n>Save</a>
   </div>
-  <div class="modal__header">
-    <div *ngIf="isEditingPriority" class="patient__priority">
-      <i (click)="isEditingPriority=false" class="peakicon peakicon-remove"></i>
-      <button *ngFor="let i of [0,0,0,0,0,0]; let p = index" type="button" (click)="onPriority(p)"
-        [class]="'btn btn-sm btn-priority btn-priority--' + p" [class.btn-priority--selected]="p == priority">
-        <span *ngIf="p==0">Immediate</span>
-        <span *ngIf="p==1">Delayed</span>
-        <span *ngIf="p==2">Minimal</span>
-        <span *ngIf="p==3">Expectant</span>
-        <span *ngIf="p==4">Dead</span>
-        <span *ngIf="p==5">Transported</span>
-      </button>
+  <div class="modal__body">
+    <div class="d-flex mb-4">
+      <div class="mr-5">
+        <div class="patient__pin"><span i18n>Tag #:</span> {{observation ? observation.pin : patient?.pin}}</div>
+        <div class="patient__updated"><b i18n>Last Updated:</b> <span *ngIf="!patient" i18n>New Patient</span><span *ngIf="patient">{{observation ? (observation?.updatedAt|relativeDate:now) : (patient?.updatedAt|relativeDate:now)}}</span></div>
+      </div>
+      <!-- <button class="btn btn-sm btn-record" type="button" i18n>
+        <i class="peakicon peakicon-record"></i> Record
+      </button> -->
     </div>
-    <div *ngIf="patient?.updatedAt" class="patient__updated"><span i18n>Last Update:</span> {{patient?.updatedAt|relativeDate:now}}</div>
-    <div class="patient__photo" [style.background-image]="patient?.portraitUrl|cssUrl">
-      <i *ngIf="!patient?.portraitUrl" class="peakicon peakicon-user"></i>
-    </div>
-    <div class="flex-grow-1">
-      <h2 class="patient__name">{{observation ? observation.firstName : patient?.firstName}}&nbsp;{{observation ? observation.lastName : patient?.lastName}}</h2>
-      <div class="patient__actions" [class.invisible]="isEditingPriority" >
-        <div>
-          <button class="btn btn-sm btn-outline-primary" type="button" i18n>Transport</button>
-          <button (click)="isEditingPriority=true" class="btn btn-sm btn-outline-primary" type="button" i18n>Update Status</button>
+    <div class="d-flex mb-5">
+      <div class="patient__photo" [style.background-image]="patient?.portraitUrl|cssUrl">
+        <i *ngIf="!patient?.portraitUrl" class="peakicon peakicon-user"></i>
+      </div>
+      <div class="flex-grow-1">
+        <div class="d-flex">
+          <div class="form-group patient__age">
+            <shared-field-input i18n-label label="Age" id="age" type="number" [source]="patient" [target]="observation">
+              <ng-template let-isFocusable="isFocusable" let-isEditing="isEditing" let-source="source" let-target="target">
+                <select id="ageUnits" name="ageUnits" class="custom-select ml-2"
+                  [class.form-control]="isFocusable && isEditing"
+                  [class.form-control-plaintext]="!isFocusable || !isEditing"
+                  [disabled]="!isFocusable || !isEditing"
+                  [(ngModel)]="isEditing ? target.ageUnits : source.ageUnits">
+                  <option value="2516009">y</option>
+                  <option value="2516007">mo</option>
+                  <option value="2516001">d</option>
+                  <option value="2516003">h</option>
+                  <option value="2516005">min</option>
+                </select>
+              </ng-template>
+            </shared-field-input>
+          </div>
+          <div class="form-group patient__gender">
+            <shared-field-select i18n-label label="Gender" id="gender" [source]="patient" [target]="observation">
+              <option value="9906001" i18n>Female</option>
+              <option value="9906003" i18n>Male</option>
+              <option value="9906007" i18n>Trans Male</option>
+              <option value="9906009" i18n>Trans Female</option>
+              <option value="9906011" i18n>Other</option>
+              <option value="9906005" i18n>Unknown</option>
+            </shared-field-select>
+          </div>
+          <div class="form-group patient__firstName">
+            <shared-field-input i18n-label label="First name" id="firstName" [source]="patient" [target]="observation"></shared-field-input>
+          </div>
+          <div class="form-group patient__lastName">
+            <shared-field-input i18n-label label="Last name" id="lastName" [source]="patient" [target]="observation"></shared-field-input>
+          </div>
         </div>
-        <!-- <button class="btn btn-sm btn-record" type="button" i18n>
-          <i class="peakicon peakicon-record"></i> Record
-        </button> -->
+        <div class="form-group">
+          <shared-field-input i18n-label label="Injury or C/O" id="complaint" [source]="patient" [target]="observation"></shared-field-input>
+        </div>
+        <div *ngIf="observation || isEditingPriority" class="patient__priority">
+          <button *ngFor="let i of [0,0,0,0,0,0]; let p = index" type="button" (click)="onPriority(p)"
+            [class]="'btn btn-sm btn-priority btn-priority--' + p" [class.btn-priority--selected]="p == priority">
+            <span *ngIf="p==0">Immediate</span>
+            <span *ngIf="p==1">Delayed</span>
+            <span *ngIf="p==2">Minimal</span>
+            <span *ngIf="p==3">Expectant</span>
+            <span *ngIf="p==4">Dead</span>
+            <span *ngIf="p==5">Transported</span>
+          </button>
+        </div>
+        <div *ngIf="patient && !observation && !isEditingPriority" class="patient__priority patient__priority--noneditable">
+          <button type="button" [class]="'btn btn-sm btn-priority btn-priority--' + patient.priority">
+            <span *ngIf="patient.priority==0">Immediate</span>
+            <span *ngIf="patient.priority==1">Delayed</span>
+            <span *ngIf="patient.priority==2">Minimal</span>
+            <span *ngIf="patient.priority==3">Expectant</span>
+            <span *ngIf="patient.priority==4">Dead</span>
+            <span *ngIf="patient.priority==5">Transported</span>
+          </button>
+          <div class="patient__actions">
+            <button (click)="isEditingPriority=true" type="button" class="btn btn-sm btn-outline-primary" i18n>Update Status</button>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="modal__body">
     <div class="row">
       <div class="col-md-6 col-xl-4">
         <fieldset class="form-field-group">
-          <legend i18n>Patient Info</legend>
+          <legend i18n>Vitals</legend>
           <div class="form-group">
-            <shared-field-input i18n-label label="First name" id="firstName" [source]="patient" [target]="observation"></shared-field-input>
+            <shared-field-input i18n-label label="Respiratory Rate" id="respiratoryRate" [source]="patient" [target]="observation"></shared-field-input>
           </div>
           <div class="form-group">
-            <shared-field-input i18n-label label="Last name" id="lastName" [source]="patient" [target]="observation"></shared-field-input>
+            <shared-field-input i18n-label label="Pulse" id="pulse" [source]="patient" [target]="observation"></shared-field-input>
           </div>
           <div class="form-group">
-            <shared-field-input i18n-label label="Age" id="age" [source]="patient" [target]="observation"></shared-field-input>
+            <shared-field-input i18n-label label="Capillary Refill" id="capillaryRefill" [source]="patient" [target]="observation"></shared-field-input>
+          </div>
+          <div class="form-group">
+            <shared-field-input i18n-label label="Blood Pressure" id="bloodPressure" [source]="patient" [target]="observation"></shared-field-input>
+          </div>
+          <div class="form-group">
+            <shared-field-input i18n-label label="Total Glasgow Coma Score" id="gcsTotal" [source]="patient" [target]="observation"></shared-field-input>
           </div>
         </fieldset>
+        <!-- <fieldset>
+          <legend i18n>Photos</legend>
+        </fieldset> -->
+      </div>
+      <div class="col-md-6 col-xl-4">
         <fieldset *ngIf="patient?.transportAgencyId || patient?.transportFacilityId" class="form-field-group">
           <legend i18n>Transport</legend>
           <div class="form-group">
@@ -82,26 +141,6 @@
             <shared-field-input i18n-label label="GPS" id="gps" [isFocusable]="false" [source]="patient" [target]="observation"></shared-field-input>
           </div>
         </fieldset>
-      </div>
-      <div class="col-md-6 col-xl-4">
-        <fieldset class="form-field-group">
-          <legend i18n>Vitals</legend>
-          <div class="form-group">
-            <shared-field-input i18n-label label="Respiratory Rate" id="respiratoryRate" [source]="patient" [target]="observation"></shared-field-input>
-          </div>
-          <div class="form-group">
-            <shared-field-input i18n-label label="Pulse" id="pulse" [source]="patient" [target]="observation"></shared-field-input>
-          </div>
-          <div class="form-group">
-            <shared-field-input i18n-label label="Capillary Refill" id="capillaryRefill" [source]="patient" [target]="observation"></shared-field-input>
-          </div>
-          <div class="form-group">
-            <shared-field-input i18n-label label="Blood Pressure" id="bloodPressure" [source]="patient" [target]="observation"></shared-field-input>
-          </div>
-        </fieldset>
-        <!-- <fieldset>
-          <legend i18n>Photos</legend>
-        </fieldset> -->
       </div>
       <div class="col-md-6 col-xl-4">
         <fieldset class="form-field-group">
