--- a/client/dashboard/scenes/patients/patient-row.component.scss
+++ b/client/dashboard/scenes/patients/patient-row.component.scss
@@ -16,13 +16,14 @@
 }
 
 .patient__photo {
+  flex-shrink: 0;
   border-radius: 2.3125rem;
   width: 4.625rem;
   height: 4.625rem;
   color: white;
   overflow: hidden;
   text-align: center;
-  margin: 0 3rem 0 1rem;
+  margin: 0 2rem 0 1rem;
   background-size: cover;
   background-position: center center;
   .peakicon-user {
@@ -37,10 +38,10 @@
   display: flex;
   align-items: center;
   width: 21.75rem;
+  flex-shrink: 0;
 }
 
-.patient__priority,
-.patient__name {
+.patient__priority {
   @include copy-m-bold;
 }
 
@@ -48,32 +49,40 @@
   @include copy-s-regular;
 }
 
-.patient__name {
-  flex-grow: 1;
-  padding: 0 4rem 0 2rem;
+.patient__pin {
+  flex-shrink: 0;
+  width: 12rem;
+  padding: 0 2rem;
 }
 
 .patient__gender {
+  flex-shrink: 0;
+  width: 10rem;
   padding: 0 2rem;
-  width: 8rem;
 }
 
 .patient__age {
+  flex-shrink: 0;
+  width: 10rem;
   padding: 0 2rem;
-  width: 8rem;
 }
 
-.patient__location {
+.patient__complaint {
+  flex-shrink: 0;
+  flex-grow: 1;
   padding: 0 2rem;
-  width: 15rem;
+  min-width: 16rem;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 
-.patient__injury {
-  flex-grow: 1;
+.patient__name {
   padding: 0 2rem;
+  width: 20rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .patient--0 {
