[peakresponse/peak-ios#65] MGS can assign Responder Roles

--- a/client/assets/css/_variables.scss
+++ b/client/assets/css/_variables.scss
@@ -12,6 +12,10 @@ $orangeAccent: #ee924f;
 /// Text & Icons
 $mainGrey: #3d5058;
 $lowPriorityGrey: #94a6ad;
+$red: #eb5757;
+$purple2: #bb6bd9;
+$yellow: #f2c94c;
+$green3: #6fcf97;
 
 /// Triage States
 $minimalGreen: #6ae18b;
