--- a/client/assets/css/site.scss
+++ b/client/assets/css/site.scss
@@ -116,6 +116,10 @@ b {
 
 .btn-xs {
   @include btn-xs;
+
+  .peakicon-down-arrow {
+    font-size: 0.75rem;
+  }
 }
 
 .btn-sm {
@@ -186,8 +190,242 @@ b {
   margin-right: 0.5em;
 }
 
+.btn span + .peakicon {
+  margin-left: 0.5em;
+  margin-right: -0.5em;
+}
+
 .btn .peakicon-add {
   font-size: 1.5em;
+}
+
+.btn-role {
+  justify-content: flex-start;
+  padding: 2px;
+
+  .peakicon {
+    color: white;
+    border-radius: 1.25rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    margin: 0;
+    display: flex;
+    flex-shrink: 0;
+    justify-content: center;
+    align-items: center;
+  }
+
+  span {
+    flex: 1;
+    text-align: center;
+  }
+
+  &.btn-xs {
+    @include copy-xs-bold;
+  }
+
+  &.btn-role--mgs {
+    &.btn-role--highlighted,
+    &:hover,
+    &:disabled {
+      background-color: $peakBlue;
+      border-color: $peakBlue;
+      .peakicon {
+        color: $peakBlue;
+        font-size: 1.5rem;
+      }
+    }
+  }
+
+  &.btn-role--triage {
+    color: $red;
+    .peakicon {
+      background-color: $red;
+      font-size: 1.4rem;
+    }
+    &.btn-role--highlighted,
+    &:hover,
+    &:disabled {
+      background-color: $red;
+      border-color: $red;
+      .peakicon {
+        color: $red;
+      }
+    }
+  }
+
+  &.btn-role--treatment {
+    color: $purple2;
+    .peakicon {
+      background-color: $purple2;
+      font-size: 1.2rem;
+    }
+    &.btn-role--highlighted,
+    &:hover,
+    &:disabled {
+      background-color: $purple2;
+      border-color: $purple2;
+      .peakicon {
+        color: $purple2;
+      }
+    }
+  }
+
+  &.btn-role--staging {
+    color: $yellow;
+    .peakicon {
+      background-color: $yellow;
+      font-size: 1.1rem;
+    }
+    &.btn-role--highlighted,
+    &:hover,
+    &:disabled {
+      background-color: $yellow;
+      border-color: $yellow;
+      .peakicon {
+        color: $yellow;
+      }
+    }
+  }
+
+  &.btn-role--transport {
+    color: $green3;
+    .peakicon {
+      background-color: $green3;
+      font-size: 1.2rem;
+    }
+    &.btn-role--highlighted,
+    &:hover,
+    &:disabled {
+      background-color: $green3;
+      border-color: $green3;
+      .peakicon {
+        color: $green3;
+      }
+    }
+  }
+
+  &.btn-role--unassign {
+    color: $lowPriorityGrey;
+    .peakicon {
+      background-color: $lowPriorityGrey;
+    }
+    &.btn-role--highlighted,
+    &:hover,
+    &:disabled {
+      background-color: $lowPriorityGrey;
+      border-color: $lowPriorityGrey;
+      .peakicon {
+        color: $lowPriorityGrey;
+      }
+    }
+  }
+
+  &.btn-role--highlighted,
+  &:hover,
+  &:disabled {
+    opacity: 1;
+    color: white;
+    .peakicon {
+      background-color: white;
+    }
+  }
+
+  &:disabled {
+    cursor: initial;
+  }
+}
+
+.btn-role--remove {
+  border: 0;
+  background: transparent;
+  color: $mainGrey;
+  display: flex;
+  align-items: center;
+  padding: 0;
+  margin-right: 0.25rem;
+}
+
+/// Dropdowns
+
+.btn.dropdown-toggle::after {
+  content: '\F106';
+  font-family: peakicons !important;
+  font-style: normal;
+  font-weight: normal !important;
+  font-size: 0.9em;
+  vertical-align: top;
+  border: 0;
+}
+
+.show.dropdown {
+  .btn.dropdown-toggle::after {
+    transform: scaleY(-1);
+  }
+}
+
+.btn-role-dropdown {
+  position: relative !important;
+  top: -1.4375rem;
+  width: 10rem;
+  background: transparent;
+  border-color: $greyPeakBlue;
+  border-width: 2px;
+  border-radius: 0;
+  border-style: solid;
+  border-top: 0;
+  padding: 1.4375rem 0 0;
+
+  &.btn-role--triage {
+    border-color: $red;
+  }
+
+  &.btn-role--treatment {
+    border-color: $purple2;
+  }
+
+  &.btn-role--staging {
+    border-color: $yellow;
+  }
+
+  &.btn-role--transport {
+    border-color: $green3;
+  }
+
+  .btn-role {
+    min-width: 8rem;
+    width: 8rem;
+    span {
+      @include copy-xs-bold;
+    }
+  }
+
+  .btn-role-dropdown__bg {
+    div + div {
+      margin-top: 0.75rem;
+    }
+  }
+}
+
+.btn-role-dropdown__bg {
+  background: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem 0;
+}
+
+.custom-select {
+  @include copy-m-bold;
+  background: #fff
+    url("data:image/svg+xml,%3Csvg width='25' height='25' viewBox='0 0 25 25' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4.436 8.82583L12.4639 17.8484L20.8422 8.84245' stroke='%233D5058' stroke-width='4' stroke-linecap='round'/%3E%3C/svg%3E")
+    no-repeat right 1.25rem center/1.5rem 1.5rem;
+  border: 0;
+  border-radius: 0.125rem;
+  box-shadow: $searchShadow;
+  color: $mainGrey;
+  height: calc(1.5rem + 1.875rem);
+  padding: 0.9375rem 2.75rem 0.9375rem 1.25rem;
 }
 
 /// Form controls
@@ -206,21 +444,6 @@ input.form-control.form-control--search {
   background: #fff
     url("data:image/svg+xml,%3Csvg width='34' height='34' viewBox='0 0 34 34' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M15.6029 28.7588C22.7154 28.7588 28.4812 22.9569 28.4812 15.7998C28.4812 8.64276 22.7154 2.84082 15.6029 2.84082C8.49042 2.84082 2.72461 8.64276 2.72461 15.7998C2.72461 22.9569 8.49042 28.7588 15.6029 28.7588Z' stroke='%233D5058' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M31.6998 31.9986L24.6973 24.9521' stroke='%233D5058' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A")
     no-repeat right 1.25rem center/1.5rem 1.5rem;
-  padding: 0.9375rem 2.75rem 0.9375rem 1.25rem;
-}
-
-/// Dropdowns
-
-.custom-select {
-  @include copy-m-bold;
-  background: #fff
-    url("data:image/svg+xml,%3Csvg width='25' height='25' viewBox='0 0 25 25' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4.436 8.82583L12.4639 17.8484L20.8422 8.84245' stroke='%233D5058' stroke-width='4' stroke-linecap='round'/%3E%3C/svg%3E")
-    no-repeat right 1.25rem center/1.5rem 1.5rem;
-  border: 0;
-  border-radius: 0.125rem;
-  box-shadow: $searchShadow;
-  color: $mainGrey;
-  height: calc(1.5rem + 1.875rem);
   padding: 0.9375rem 2.75rem 0.9375rem 1.25rem;
 }
 
