--- a/views/admin/layout.ejs
+++ b/views/admin/layout.ejs
@@ -12,7 +12,6 @@
     <base href="/admin/">
     <script type="text/javascript">
     window.env = {};
-    window.env.ASSET_HOST = '<%= process.env.ASSET_HOST %>';
     </script>
     <% if (locals.head) { %><%- head %><% } %>
   </head>
@@ -21,7 +20,7 @@
       <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/"><%= process.env.APP_NAME %></a>
       <div class="collapse navbar-collapse justify-content-end">
         <% if (currentUser) { %>
-          <% if (currentUser.iconUrl) { %><img class="navbar-icon rounded" src="<%= assetUrl(currentUser.iconUrl) %>">&nbsp;<% } %>
+          <% if (currentUser.iconUrl) { %><img class="navbar-icon rounded" src="<%= currentUser.iconUrl %>">&nbsp;<% } %>
           <span class="navbar-text">Hello, <%= currentUser.firstName %>!</span>
         <% } %>
         <ul class="navbar-nav px-3">
