--- a/client/admin/agencies/list-agencies.component.html
+++ b/client/admin/agencies/list-agencies.component.html
@@ -1,7 +1,10 @@
 <router-outlet></router-outlet>
 <div [class.d-none]="route.firstChild">
   <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
-    <h1 class="h2">Agencies</h1>
+    <div class="d-flex">
+      <h1 class="h2">Agencies</h1>
+      <input [ngModel]="search" (ngModelChange)="searchSubject.next($event)" type="text" class="form-control ml-3" placeholder="Search..." id="search" name="search" />
+    </div>
     <a routerLink="/agencies/new" class="btn btn-sm btn-outline-secondary">New Agency</a>
   </div>
   <div class="table-responsive">
@@ -14,13 +17,13 @@
           <th>State</th>
         </tr>
       </thead>
-      <app-shared-list type="agencies">
+      <app-shared-list type="agencies" [search]="search">
         <ng-template let-record="record">
           <tr>
             <td><a [routerLink]="['/agencies', record.id]">{{record.stateUniqueId}}</a></td>
             <td><a [routerLink]="['/agencies', record.id]">{{record.number}}</a></td>
             <td><a [routerLink]="['/agencies', record.id]">{{record.name}}</a></td>
-            <td><a [routerLink]="['/agencies', record.id]">{{record.state.abbr}}</a></td>
+            <td><a [routerLink]="['/agencies', record.id]">{{record.stateId}}</a></td>
           </tr>
         </ng-template>
       </app-shared-list>
