--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,9 +56,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact Us</a>
               </li>
-              <!-- <li class="nav-item">
+              <li class="nav-item">
                 <a class="btn btn-xs btn-outline-primary" href="/sign-up">Sign Up</a>
-              </li> -->
+              </li>
             </ul>
           </div>
         </div>
