[#62] Hide Add Note/Add Photo from Scene Overview until implemented

--- a/client/dashboard/scenes/scene-overview.component.html
+++ b/client/dashboard/scenes/scene-overview.component.html
@@ -31,14 +31,14 @@
           </div>
         </ng-container>
       </div>
-      <hr />
+      <!-- <hr />
       <div class="notes">
         <button type="button" class="btn btn-sm btn-outline-primary btn-add" i18n><i class="peakicon peakicon-note"></i>Add Note</button>
       </div>
       <hr />
       <div class="photos">
         <button type="button" class="btn btn-sm btn-outline-primary btn-add" i18n><i class="peakicon peakicon-camera"></i>Add Photo</button>
-      </div>
+      </div> -->
     </div>
     <div class="overview__responders">
       <h2>{{(scene.responders$|async).length}} First Responders on Scene</h2>
