[#58] Update prompts to App Store with link to TestFlight

--- a/emails/welcome/text.ejs
+++ b/emails/welcome/text.ejs
@@ -8,7 +8,9 @@ You can access your account on the web at:
 
 <%= agencyUrl %>
 
-And you can download the mobile app for iPhone from the App Store.
+And you can sign up to test our pre-release iPhone app here:
+
+https://testflight.apple.com/join/MXQBXfPF
 
 Cheers, 
 The Peak Response Team
