--- a/client/onboarding/completed.component.html
+++ b/client/onboarding/completed.component.html
@@ -6,7 +6,7 @@
     <div class="row narrow">
       <div class="col">
         <p i18n>Click on your unique agency link below to sign in to start using Peak Response.</p>
-        <p i18n>You can also get our mobile app by following the link in your account confirmation email or by looking up Peak Response on the App Store.</p>
+        <p i18n>You can also get our iPhone app by following the link in your account confirmation email on your phone.</p>
         <p>&nbsp;</p>
         <p class="text-center"><a class="btn btn-lg btn-primary" [href]="safeUrl">{{url}}</a></p>
       </div>
