--- a/emails/welcome/html.ejs
+++ b/emails/welcome/html.ejs
@@ -5,7 +5,8 @@
 <h2>Getting Started is Easy</h2>
 <p>You can access your account on the web at:</p>
 <p><a href="<%= agencyUrl %>"><%= agencyUrl %></a></p>
-<p>And you can download the mobile app for iPhone on the App Store.</p>
+<p>And you can sign up to test our pre-release iPhone app here:</p>
+<p><a href="https://testflight.apple.com/join/MXQBXfPF">https://testflight.apple.com/join/MXQBXfPF</a></p>
 <p>Cheers,<br />
 The Peak Response Team</p>
 <p><small>If you don't recognize this account, let us know above and we'll look into it.</small></p>
