--- a/client/dashboard/scenes/patients/patient.component.html
+++ b/client/dashboard/scenes/patients/patient.component.html
@@ -45,7 +45,7 @@
           </div>
         </div>
         <div class="form-group">
-          <shared-field-input i18n-label label="Injury or C/O" id="complaint" [source]="patient" [target]="observation"></shared-field-input>
+          <shared-field-input i18n-label label="Chief Complaint" id="complaint" [source]="patient" [target]="observation"></shared-field-input>
         </div>
         <div *ngIf="observation || isEditingPriority" class="patient__priority">
           <button *ngFor="let i of [0,0,0,0,0,0]; let p = index" type="button" (click)="onPriority(p)"
