[#69] Hide Scene Map/Photos/Notes from closed Scene Summary

--- a/client/dashboard/scenes/scene-summary.component.html
+++ b/client/dashboard/scenes/scene-summary.component.html
@@ -12,7 +12,7 @@
       <app-dashboard-patient-row (click)="show(patient)" [patient]="patient" [now]="now"></app-dashboard-patient-row>
     </ng-container>
   </div>
-  <div class="scene">
+  <!-- <div class="scene">
     <div class="row">
       <div class="col-lg-4">
         <h2 i18n>Scene Map</h2>
@@ -26,6 +26,6 @@
         <h2 i18n>Notes</h2>
       </div>
     </div>
-  </div>
+  </div> -->
 </app-dashboard-main>
 <router-outlet name="modal"></router-outlet>
